--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: Pokemon GO Spooting Guide
+title: Pokemon GO Spoofing Guide
 description: In-depth guide covering everything in order to spoof on Pokemon GO
